# VehicleGateway

./: BETAFLIGHT_README.md  README.md  build_gazebo_from_source.md  dependencies.repos
.github/workflows/: ci.yaml
Docker/dev/: Dockerfile
Docker/nvidia_jetson/: Dockerfile
betaflight_configurator/: CMakeLists.txt
betaflight_controller/: send_msp_test.py
betaflight_gazebo/: CMakeLists.txt  package.xml
betaflight_gazebo/include/betaflight_gazebo/: BetaflightPlugin.hpp
betaflight_gazebo/src/: BetaflightPlugin.cpp
betaflight_sim/: CMakeLists.txt
betaflight_sim/launch/: quadcopter.launch.py  quadcopter_joystick.launch.py
betaflight_sim/worlds/: empty_betaflight_world.sdf
gz_aerial_plugins/: CMakeLists.txt  package.xml
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: gazebo_bridge.yaml
my_robot_bringup/launch/: my_robot.launch.xml  my_robot_camera_launch.xml
my_robot_bringup/worlds/: sandbox.sdf
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/launch/: display.launch.py  display.launch.xml
my_robot_description/models/iris_with_standoffs/: model.sdf
my_robot_description/urdf/: common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
px4_sim/: README.md
qgroundcontrol/: CMakeLists.txt
vehicle_gateway_betaflight/: CMakeLists.txt  package.xml
vehicle_gateway_sim_performance/: CMakeLists.txt  package.xml
